# OS-CA-Real-Time-Process-Monitoring-Dashboard

./: .gitignore  00_DOCUMENTATION_INDEX.md  01_QUICKSTART.md  02_PROBLEM_STATEMENT.md  03_ARCHITECTURE.md  04_HOW_IT_WORKS.md  05_DIAGRAMS.md  06_PROJECT_SUMMARY.md  07_TROUBLESHOOTING.md  08_CONTRIBUTING.md  API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  CROSS_PLATFORM.md  GITHUB_ISSUE_GUIDE.md  MAC_QUICKSTART.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  SECURITY.md  START_ALL.bat  START_PYTHON.bat  START_RUST_ADMIN.bat  TEST_REPORT.md  TROUBLESHOOTING.md  basic_monitor.py  index.html  script.js  start.bat  start_all.sh
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
backend/: Cargo.toml  README.md  main.py  requirements.txt
backend-v1-fastapi/: main.py
backend/src/: main.rs
backend/tests/: integration_tests.rs
frontend/: electron.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
older versions/: EVOLUTION.md  package-lock.json  package.json  styles.css
older versions/docs/: TYPESCRIPT_CONVERSION_FINAL.md  TYPESCRIPT_MIGRATION.md
older versions/frontend-old/: AlertBanner.jsx  App.jsx  formatters.js
older versions/scripts/: setup.bat  setup.sh  start.sh
reports/: 1_coding_evaluation.md  2_documentation_evaluation.md  3_github_workflow_evaluation.md
tester/: README.md
tester/e2e/: full_system.test.ts  package.json
tester/frontend/: App.test.tsx  setupTests.ts
(+34 files in other folders)
