[package]
name = "task_manager_backend"
version = "2.0.0"
edition = "2021"

[dependencies]
# Web framework (fastest async runtime)
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System information (fast native Rust crate)
sysinfo = "0.32"

# GPU monitoring (NVML for NVIDIA GPUs)
nvml-wrapper = "0.10"

# Async utilities
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
